--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "esbuild": "^0.15.7",
     "minimist": "^1.2.6",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vitest": "^0.23.2"
   }
 }
