--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A vue-source-learning project",
   "main": "index.js",
   "scripts": {
-    "dev": "node scripts/dev.js reactivity -f global"
+    "dev": "node scripts/dev.js reactivity -f global",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "Shy Robin",
